2019-07-10  Corentin Gay  <gay@adacore.com>

	* sysdep.c: Put include directive for 'vxWorks.h' before any
	other VxWorks headers.

2019-07-10  Eric Botcazou  <ebotcazou@adacore.com>

	* doc/gnat_rm/implementation_defined_attributes.rst
	(Scalar_Storage_Order): Minor tweaks.  Add note about debuggers.
	* gnat_rm.texi: Regenerate.

2019-07-10  Hristian Kirtchev  <kirtchev@adacore.com>

	* exp_ch4.adb (Expand_N_Case_Expression): Mark the generated
	assignments to the temporary result as being OK because the
	expansion of case expressions is correct by construction.
	(Is_Copy_Type): Update the predicate to match the comment
	within.

2019-07-10  Hristian Kirtchev  <kirtchev@adacore.com>

	* bindo-graphs.adb, bindo.adb, debug.adb, exp_ch6.adb,
	sem_ch10.adb, sem_ch13.adb, sem_ch3.adb, sem_ch4.adb,
	sem_ch6.adb, sem_ch7.adb, sem_res.adb, sem_spark.adb,
	sem_util.adb, warnsw.ads: Minor reformatting.

2019-07-10  Joffrey Huguet  <huguet@adacore.com>

	* libgnat/a-strbou.ads, libgnat/a-strfix.ads,
	libgnat/a-strunb.ads, libgnat/a-strunb__shared.ads: Add global
	contracts, contract cases, preconditions and postconditions to
	procedures and functions.

2019-07-10  Doug Rupp  <rupp@adacore.com>

	* sysdep.c (__gnat_is_file_not_found_error): Reformulate to also
	work for vxworks7r2 SR0610.

2019-07-10  Doug Rupp  <rupp@adacore.com>

	* env.c (__gnat_environ): Reformulate to also work for
	vxworks7r2 SR0610.

2019-07-10  Patrick Bernardi  <bernardi@adacore.com>

	* Makefile.rtl: Handle vxworks7r2 ppc target

2019-07-10  Hristian Kirtchev  <kirtchev@adacore.com>

	* bindo.adb: Update the section on switches.
	* bindo-graphs.adb
	(Add_Cycle, Add_Vertex_And_Complement): Remove.
	(Create): The graph no longer needs a set of recorded cycles
	because the cycles are not rediscovered in permuted forms.
	(Cycle_End_Vertices): New routine.
	(Destroy): The graph no longer needs a set of recorded cycles
	because the cycles are not rediscovered in permuted forms.