@@ -1,3 +1,8 @@
+2019-07-10  Yannick Moy  <moy@adacore.com>
+
+	* osint-c.adb (Set_File_Name): Always add extension for multiple
+	units per file mode.
+
 2019-07-10  Corentin Gay  <gay@adacore.com>
 
 	* sysdep.c: Put include directive for 'vxWorks.h' before any
